fix: change starting delay time

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [DEFAULT]
-starting_delay_seconds = 1
-arrow_middle_offset = -10
-target_range_left_offset = 4
-target_range_right_offset = 4
+starting_delay_seconds = 0.1
+arrow_middle_offset = 13
+target_range_left_offset = 6
+target_range_right_offset = 6
+debug=True
+take_screen_shot=True
